RIP-v10.3- /mobile overflow fix in progress

--- a/css/login.css
+++ b/css/login.css
@@ -4,8 +4,9 @@
   grid-template-rows   : 1fr;
   padding-top          : 90px;
   width                : 100%;
-  height               : auto;
+  height               : 100%;
 
+  overflow: hidden;
   grid-template-areas  :
     " content header";
 }
@@ -65,12 +66,16 @@
 .full-page .content {
   display        : flex;
   width          : 100%;
-  height: auto;
+  height: 100%;
   justify-content: center;
   align-items    : flex-start;
   grid-area      : content;
   padding        : clamp(20px, 7.5vw, 50vw);
   box-sizing     : border-box;
+
+  overflow: hidden;
+  overflow: overlay;
+  overflow-y: scroll;
 }
 
 
@@ -400,9 +405,8 @@
     display       : flex;
     flex-direction: column !important;
     width         : 100%;
-
     padding-top   : 0px;
-
+    justify-content: flex-start;
   }
 
   .full-page .header {
